2009-05-21  Christian Dywan  <christian@twotoasts.de>

Reviewed by Darin Adler.

        Text files which have sub MIME types are treated as not displayable
        http://bugs.webkit.org/show_bug.cgi?id=24903

        * platform/MIMETypeRegistry.cpp:
        (WebCore::initializeSupportedNonImageMimeTypes):
        (WebCore::MIMETypeRegistry::isSupportedNonImageMIMEType): Regard any
        MIME type beginning with "text/" as supported and remove all "text/"
        types from the list.

git-svn-id: svn://svn.chromium.org/blink/trunk@43979 bbb929c8-8fbe-4397-9dbb-9b2b20218538