third_party/WebKit/WebCore/platform/MIMETypeRegistry.cpp
@@ -191,14 +191,8 @@ static void initializeSupportedNonImageMimeTypes()
 {
     static const char* types[] = {
 #if ENABLE(WML)
-        "text/vnd.wap.wml",
         "application/vnd.wap.wmlc",
 #endif
-        "text/html",
-        "text/xml",
-        "text/xsl",
-        "text/plain",
-        "text/",
         "application/xml",
         "application/xhtml+xml",
 #if ENABLE(XHTMLMP)
@@ -390,6 +384,8 @@ bool MIMETypeRegistry::isSupportedNonImageMIMEType(const String& mimeType)
 {
     if (mimeType.isEmpty())
         return false;
+    if (mimeType.startsWith("text/"))
+        return true;
     if (!supportedNonImageMIMETypes)
         initializeMIMETypeRegistry();
     return supportedNonImageMIMETypes->contains(mimeType);
